# proj2/routes/index.js
@@ -1,3 +1,5 @@
+const passport = require('passport');
+
 const router = require('express').Router();
 
 router.use('/', require('./swagger'));
@@ -9,5 +11,17 @@ router.get('/', (req, res) => {
 router.use('/products', require('./products'));
 
 router.use('/distributors', require('./distributors'));
+
+//  oauth login and out
+router.get('/login', passport.authenticate('github', (req, res) => {}));
+
+router.get('/logout', function(req, res, next) {
+    req.logOut(function(err) {
+        if (err) {
+            return next(err);
+        }
+        res.redirect('/');
+    });
+});
 
 module.exports = router;
